--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RedditSimpleClient</string>
     <string name="error_load_posts">Cannot load posts</string>
+    <string name="has_full_image">has full image</string>
+    <string name="not_has_full_image">no full image</string>
 </resources>
